upload for googleverification

--- a/index.html
+++ b/index.html
@@ -5,44 +5,58 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-
-
-
+  <meta name="robots" content="index, follow" />
   <meta name="google-site-verification" content="MctgUQvKWEaD5pTrhtGx2P3g7q1skWmiOBUv3dWBwkU" />
 
-  <title>Buy Idly & Dosa Batter in Marthandam | MasterFoods</title>
-  <meta name="description"
-    content="Order fresh, preservative-free idly and dosa batter online in Marthandam. Fast delivery, homemade taste. MasterFoods - Taste the tradition!">
-
-  <meta name="keywords"
-    content="idly batter, dosa batter, buy batter online, fresh batter, master foods, homemade batter, south indian food" />
-
+  <title>MasterFoods | Fresh Idly & Dosa Batter</title>
+  <meta name="description" content="Order fresh, preservative-free idly and dosa batter online in Marthandam. Fast delivery, homemade taste. MasterFoods - Taste the tradition!">
+  <meta name="keywords" content="idly batter, dosa batter, buy batter online, fresh batter, master foods, homemade batter, south indian food" />
   <meta name="author" content="Master Foods" />
 
-  <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "LocalBusiness",
-  "name": "MasterFoods",
-  "image": "https://www.masterfoods.in/logo.png",
-  "url": "https://www.masterfoods.in",
-  "telephone": "+91-9876543210",
-  "address": {
-    "@type": "PostalAddress",
-    "streetAddress": "Pammam Main Road",
-    "addressLocality": "Marthandam",
-    "addressRegion": "Tamil Nadu",
-    "postalCode": "629165",
-    "addressCountry": "IN"
-  },
-  "description": "Fresh dosa and idly batter delivery in Marthandam. Homemade, natural, preservative-free."
-}
-</script>
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.masterfoods.in/" />
 
+  <!-- Facebook Open Graph Meta Tags -->
+  <meta property="og:title" content="MasterFoods | Fresh Idly & Dosa Batter" />
+  <meta property="og:description" content="Order fresh, preservative-free idly and dosa batter online in Marthandam. Fast delivery, homemade taste." />
+  <meta property="og:image" content="https://www.masterfoods.in/logo.png" />
+  <meta property="og:url" content="https://www.masterfoods.in/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="MasterFoods" />
+
+  <!-- LocalBusiness Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "MasterFoods",
+    "image": "https://www.masterfoods.in/logo.png",
+    "url": "https://www.masterfoods.in",
+    "telephone": "+91-9876543210",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Pammam Main Road",
+      "addressLocality": "Marthandam",
+      "addressRegion": "Tamil Nadu",
+      "postalCode": "629165",
+      "addressCountry": "IN"
+    },
+    "description": "Fresh dosa and idly batter delivery in Marthandam. Homemade, natural, preservative-free."
+  }
+  </script>
 </head>
 
 <body>
   <div id="root"></div>
+
+  <footer style="text-align:center; margin-top: 2rem;">
+    <a href="/products">Products</a> |
+    <a href="/cart">Cart</a> |
+    <a href="/checkout">Checkout</a> |
+    <a href="/about">About Us</a> |
+    <a href="/contact">Contact</a>
+  </footer>
+
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
